--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 @import "./reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: "Poppins", sans-serif;
   color: #000000;
@@ -65,7 +70,6 @@ body {
   max-width: 500px;
 }
 .heading {
-  width: 482px;
   margin-bottom: 20px;
   font-size: 44px;
   line-height: 66px;
@@ -106,7 +110,7 @@ body {
 }
 
 .service-card p {
-  width: 370px;
+  max-width:370px;
   font-weight: 400;
   font-size: 14px;
   line-height: 28px;
